infra/nats/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nats
  namespace: nats
spec:
  type: ClusterIP
  selector:
    app: nats
  ports:
    - name: client
      port: 4222
      protocol: TCP
    - name: monitor
      port: 8222
      protocol: TCP
